config/envoy-puma-benchmark.yaml
static_resources:
  listeners:
    - name: envoy_puma_benchmark
      per_connection_buffer_limit_bytes: 4194304
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 19203
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: envoy_puma_benchmark
                codec_type: AUTO
                route_config:
                  name: puma_route
                  virtual_hosts:
                    - name: puma
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: puma
                            timeout: 5s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    - name: envoy_puma_control
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 19204
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: envoy_puma_control
                codec_type: AUTO
                route_config:
                  name: control_route
                  virtual_hosts:
                    - name: control
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: control-ok
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: puma
      type: STATIC
      connect_timeout: 0.25s
      load_assignment:
        cluster_name: puma
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 19210
